<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.udacity.sandwichclub.DetailActivity"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sandwich_picture_content_description"
            android:scaleType="centerCrop"
            tools:background="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/origin_tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/detail_place_of_origin_label"
            app:layout_constraintTop_toBottomOf="@id/image_iv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/origin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="Place of origin"
            app:layout_constraintTop_toBottomOf="@id/image_iv"
            app:layout_constraintLeft_toRightOf="@id/origin_tv_label"
            app:layout_constraintStart_toEndOf="@id/origin_tv_label"/>

        <TextView
            android:id="@+id/also_known_tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_also_known_as_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/origin_tv_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/also_known_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="Also know as"
            app:layout_constraintTop_toBottomOf="@id/origin_tv_label"
            app:layout_constraintLeft_toRightOf="@id/also_known_tv_label"
            app:layout_constraintStart_toEndOf="@id/also_known_tv_label"/>

        <TextView
            android:id="@+id/ingredients_tv_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_ingredients_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/also_known_tv_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/ingredients_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="Tomato, cheese, bread"
            app:layout_constraintTop_toBottomOf="@id/ingredients_tv_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/description_tv_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_description_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ingredients_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="A very delicious sandwitch"
            app:layout_constraintTop_toBottomOf="@id/description_tv_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>